# esp32-weather-leds

./: .gitignore  ATTRIBUTION.md  CLAUDE.md  LICENSE  README.md  config_html.h  esp32-weather-leds.ino  secrets.h.example  version.h
.github/workflows/: build.yml  tests.yml
tests/: CMakeLists.txt  Makefile  sketch_api.h  sketch_wrapper.cpp  test_animation_cycles.cpp  test_animations.cpp  test_demo_mode.cpp  test_factory_reset.cpp  test_fetch_forecast.cpp  test_handle_ota.cpp  test_handle_root.cpp  test_handle_save.cpp  test_handle_scan.cpp  test_hostname.cpp  test_poll_weather.cpp  test_temp_to_color.cpp
tests/mocks/: Arduino.h  FastLED.h  HTTPClient.h  Preferences.h  Update.h  WebServer.h  WiFi.h  WiFiClientSecure.h  mock_support.cpp
